pom: Target Java17 and add add-opens flags to tests and launchers